Docente Horario Calendario Escolar Listo

--- a/Alumno/viewCalendarioEscolar2.html
+++ b/Alumno/viewCalendarioEscolar2.html
@@ -8,13 +8,12 @@
 	<link rel="stylesheet" href="../css/normalize.css">
 	<link rel="stylesheet" href="../css/style.css">
 	<link rel="stylesheet" href="../css/todoEstilo.css">
-	<link rel="stylesheet" href="../css/miEstilo2.css">
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
 	<script src="../js/jquery-1.10.2.min.js"></script>
 	<script src="../js/script.min.js"></script>
 	<script src="../js/swipe.min.js"></script>
 	<script src="../js/jquery.cookie.js"></script>
-	<script src="../js/docente.js"></script>
+	<script src="../js/admins.js"></script>
 	<script src="../js/gestionVisualizarCalendarioEscolar.js"></script>
 </head>
 <body class="p-admision">
@@ -52,14 +51,12 @@
 				<div class="entry-content estilo-entry-content" >
 					<p><img src="../images/post1.jpg" alt="Chicos jugando futbol"></p>
 					<ul class="navegacion">
-						<li><a href="RegistroSolicitudes.html">Registro De Solicitudes</a></li>
-						<li><a href="envioComunicados.html">Envio De Comunicados</a></li>
-						<li><a href="mensajeriaDocente.html">Mensajeria</a></li>
-						<li><a href="CargaConsultaPlanEstudio.html">Plan De Estudios</a></li>
-						<li><a href="cargaCalificaciones.html">Carga De Calificaciones</a></li>
-						<li><a href="HorarioCalendarioEscolar.html">Horario y Calendario Escolar</a></li>
-						<li><a href="foros.html">Foros</a></li>
-						<li><a href="CargaDescargaRecursos.html">Asignaciones y Recursos Educativos</a></li>
+						<li><a href="#">Inscripción</a></li>
+						<li><a href="reinscripcion.html">Reiscripcion</a></li>
+						<li><a href="#">Mensajeria</a></li>
+						<li><a href="#">Usuarios</a></li>
+						<li><a href="gestion.html">Procesos De Gestión</a></li>
+						
 					</ul>
 				</div>
 			</article>
