--- a/Docente/HorarioCalendarioEscolar.html
+++ b/Docente/HorarioCalendarioEscolar.html
@@ -15,6 +15,7 @@
 	<script src="../js/swipe.min.js"></script>
 	<script src="../js/jquery.cookie.js"></script>
 	<script src="../js/docente.js"></script>
+	<script src="../js/docenteHorarioEscolar.js"></script>
 
 </head>
 <body class="p-admision">
@@ -147,12 +148,115 @@
 				<header><h2>Horario y Calendario Escolar</h2></header>
 				<hr />
 			</article>
-			<article id="noticias">
+			<article id="noticias" class="menuPrincipal">
 				<header><h3>Seleccione Una Opción</h3></header>
 					<ul id="listaGestion">
-						<li><a id="iconoconsultar" href="#"></a><a class="textoAbajo" href="#">Ver Horario Escolar</a></li>
-						<li><a id="iconomodificar" href="#"></a><a class="textoAbajo" href="#">Ver Calendario Escolar</a></li>
+						<li><a id="iconoconsultar" class="horarioEscolar"></a><a class="textoAbajo horarioEscolar" >Ver Horario Escolar</a></li>
+						<li><a id="iconomodificar" href="viewCalendarioEscolar2.html"></a><a class="textoAbajo" href="viewCalendarioEscolar2.html">Ver Calendario Escolar</a></li>
 					</ul>					
+			</article>	
+			<article id="noticias" class="hod none">
+				<header><h3>Consultar Horario</h3></header>
+				<div class="divMateriaHorarioDocenteConsultar2">
+					<div class="centrar primerDivGH">
+						<br>
+						<label class="block">Asignatura</label>
+						<select id="materiaHorarioDocenteConsultar2" class="materiaConsultarHD1">
+							<option value="0">Materia</option>
+						</select>
+						<input id="botonConsultarMateriaGH" type="Button" value="Aceptar"> 
+					</div>
+					<div class="divAtrasInfoIns centrar">
+						<a class="linkAtrasParaBuscar1 linkAtrasInfoIns linkAtrasMateriaConsultar2"></a>
+						<a class="linkAtrasParaBuscar1 textoAbajoAtras linkAtrasMateriaConsultar2">Atras</a>
+					</div>	
+				</div>
+				<div class="divTablaHorarioDocenteConsultar2 none">
+					<br>
+					<table border=1>
+						<thead>
+							<tr>
+								<th>HORA</th>
+								<th>LUNES</th>
+								<th>MARTES</th>
+								<th>MIERCOLES</th>
+								<th>JUEVES</th>
+								<th>VIERNES</th>
+							</tr>
+						</thead>
+						<tbody class="centrar">
+							<tr>
+								<td><span>07:15</span></td>
+								<td><span id="materiaCnHD01" class="spanConsultar"></span></td>
+								<td><span id="materiaCnHD02" class="spanConsultar"></span></td>
+								<td><span id="materiaCnHD03" class="spanConsultar"></span></td>
+								<td><span id="materiaCnHD04" class="spanConsultar"></span></td>
+								<td><span id="materiaCnHD05" class="spanConsultar"></span></td>
+							</tr>
+							<tr>
+								<td><span>08:35</span></td>
+								<td><span id="gradoCnHD01" class="spanConsultar"></span></td>
+								<td><span id="gradoCnHD02" class="spanConsultar"></span></td>
+								<td><span id="gradoCnHD03" class="spanConsultar"></span></td>
+								<td><span id="gradoCnHD04" class="spanConsultar"></span></td>
+								<td><span id="gradoCnHD05" class="spanConsultar"></span></td>
+							</tr>
+							<tr>
+								<td><span>08:50</span></td>
+								<td><span id="materiaCnHD06" class="spanConsultar"></span></td>
+								<td><span id="materiaCnHD07" class="spanConsultar"></span></td>
+								<td><span id="materiaCnHD08" class="spanConsultar"></span></td>
+								<td><span id="materiaCnHD09" class="spanConsultar"></span></td>
+								<td><span id="materiaCnHD10" class="spanConsultar"></span></td>
+							</tr>
+							<tr>
+								<td><span>10:05</span></td>
+								<td><span id="gradoCnHD06" class="spanConsultar"></span></td>
+								<td><span id="gradoCnHD07" class="spanConsultar"></span></td>
+								<td><span id="gradoCnHD08" class="spanConsultar"></span></td>
+								<td><span id="gradoCnHD09" class="spanConsultar"></span></td>
+								<td><span id="gradoCnHD10" class="spanConsultar"></span></td>
+							</tr>
+							<tr>
+								<td><span>10:25</span></td>
+								<td><span id="materiaCnHD11" class="spanConsultar"></span></td>
+								<td><span id="materiaCnHD12" class="spanConsultar"></span></td>
+								<td><span id="materiaCnHD13" class="spanConsultar"></span></td>
+								<td><span id="materiaCnHD14" class="spanConsultar"></span></td>
+								<td><span id="materiaCnHD15" class="spanConsultar"></span></td>
+							</tr>
+							<tr>
+								<td><span>11:45</span></td>
+								<td><span id="gradoCnHD11" class="spanConsultar"></span></td>
+								<td><span id="gradoCnHD12" class="spanConsultar"></span></td>
+								<td><span id="gradoCnHD13" class="spanConsultar"></span></td>
+								<td><span id="gradoCnHD14" class="spanConsultar"></span></td>
+								<td><span id="gradoCnHD15" class="spanConsultar"></span></td>
+							</tr>
+							<tr>
+								<td><span>11:50</span></td>
+								<td><span id="materiaCnHD16" class="spanConsultar"></span></td>
+								<td><span id="materiaCnHD17" class="spanConsultar"></span></td>
+								<td><span id="materiaCnHD18" class="spanConsultar"></span></td>
+								<td><span id="materiaCnHD19" class="spanConsultar"></span></td>
+								<td><span id="materiaCnHD20" class="spanConsultar"></span></td>
+							</tr>
+							<tr>
+								<td><span>01:00</span></td>
+								<td><span id="gradoCnHD16" class="spanConsultar"></span></td>
+								<td><span id="gradoCnHD17" class="spanConsultar"></span></td>
+								<td><span id="gradoCnHD18" class="spanConsultar"></span></td>
+								<td><span id="gradoCnHD19" class="spanConsultar"></span></td>
+								<td><span id="gradoCnHD20" class="spanConsultar"></span></td>
+							</tr>
+							
+						</tbody>
+					</table>
+					<div class="divAtrasInfoIns centrar">
+						<a class="linkAtrasParaBuscar1 linkAtrasInfoIns linkAtrasTablaHDConsultar2"></a>
+						<a class="linkAtrasParaBuscar1 textoAbajoAtras linkAtrasTablaHDConsultar2">Atras</a>
+					</div>	
+				</div>				
 			</article>						
 		</div>
 	</section>
