Planificacion Docente Casi Listo

--- a/Docente/CargaConsultaPlanEstudio.html
+++ b/Docente/CargaConsultaPlanEstudio.html
@@ -324,16 +324,18 @@
 								<td class="marRe">RECURSOS</td>
 								<td class="marTecE">TECNICAS DE EVALUACIÓN</td>
 								<td class="marPon">PONDERACIÓN</td>
+								<td class="marPon">FECHA</td>
 							</tr>
 						</thead>
 						<tbody>
 							<tr class="textAr">
-								<td id="plan01"><textarea></textarea></td>
-								<td id="plan02"><textarea></textarea></td>
-								<td id="plan03"><textarea></textarea></td>
-								<td id="plan04"><textarea></textarea></td>
-								<td id="plan05"><textarea></textarea></td>
-								<td id="plan06"><textarea></textarea></td>
+								<td><textarea id="plan01"></textarea></td>
+								<td><textarea id="plan02"></textarea></td>
+								<td><textarea id="plan03"></textarea></td>
+								<td><textarea id="plan04"></textarea></td>
+								<td><textarea id="plan05"></textarea></td>
+								<td><textarea id="plan06"></textarea></td>
+								<td><textarea id="plan07"></textarea></td>
 							</tr>
 						</tbody>
 					</table>
