horario calendario escolar estudiante Listo

--- a/Alumno/foros.html
+++ b/Alumno/foros.html
@@ -13,8 +13,8 @@
 	<script src="../js/jquery-1.10.2.min.js"></script>
 	<script src="../js/script.min.js"></script>
 	<script src="../js/swipe.min.js"></script>
-	<script src="../js/javascriptCindy.js"></script>
 	<script src="../js/jquery.cookie.js"></script>
+	<script src="../js/javascriptCindyAlumno.js"></script>
 	<script src="../js/studen.js"></script>
 </head>
 <body class="p-admision">
@@ -166,10 +166,7 @@
 					<tbody id="tbodyForos">
 						
 					</tbody>
-				</table>	
-				<div id="newForo">			
-					<a  href="foroNuevo.html">Crear Nuevo Foro</a>
-				</div>
+				</table>					
 			</article>
 		</div>
 	</section>
