--- a/Alumno/mensajeriaAlumno.html
+++ b/Alumno/mensajeriaAlumno.html
@@ -15,7 +15,7 @@
 	<script src="../js/swipe.min.js"></script>
 	<script src="../js/jquery.cookie.js"></script>
 	<script src="../js/studen.js"></script>
-	<script src="../js/mensajeria.js"></script>
+	<script src="../js/mensajeriaAlumno.js"></script>
 
 </head>
 <body class="p-admision">
