--- a/Docente/foroNuevo.html
+++ b/Docente/foroNuevo.html
@@ -14,9 +14,9 @@
 	<script type="text/javascript">bkLib.onDomLoaded(function() { nicEditors.allTextAreas() });</script>
 	<script src="../js/script.min.js"></script>
 	<script src="../js/swipe.min.js"></script>
-	<script src="../js/javascriptCindy.js"></script>
 	<script src="../js/jquery.cookie.js"></script>
 	<script src="../js/docente.js"></script>
+	<script src="../js/javascriptCindyDocente.js"></script>
 </head>
 <body class="p-admision">
 
