--- a/Docente/foros.html
+++ b/Docente/foros.html
@@ -13,6 +13,7 @@
 	<script src="../js/script.min.js"></script>
 	<script src="../js/swipe.min.js"></script>
 	<script src="../js/javascriptCindy.js"></script>
+	<script src="../js/javascriptCindyDocente.js"></script>
 	<script src="../js/jquery.cookie.js"></script>
 	<script src="../js/docente.js"></script>
 </head>
