--- a/Docente/MensajeriaDocente.html
+++ b/Docente/MensajeriaDocente.html
@@ -15,7 +15,7 @@
 	<script src="../js/swipe.min.js"></script>
 	<script src="../js/jquery.cookie.js"></script>
 	<script src="../js/docente.js"></script>
-	<script src="../js/mensajeria.js"></script>
+	<script src="../js/mensajeriaDocente2.js"></script>
 	
 
 </head>
